<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/alert"
        android:iconTint="@color/white"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/language"
        android:icon="@drawable/translator_icon_white"
        android:title="@string/select_language"
        android:visible="false"
        app:showAsAction="always" />

</menu>