<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.68"
            android:scaleType="fitXY"
            android:src="@drawable/new_sachin" />


        <EditText
            android:id="@+id/activity_splash_et_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0.1"
            android:hint="@string/user_id"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <com.luminous.mpartner.custom_text_view.TextViewRegular
            android:id="@+id/tvOtpSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="43dp"
            android:text=""
            android:textColor="@color/bullet"
            android:textSize="11sp"
            android:visibility="visible"
            tools:text="shjdh" />

        <Button
            android:id="@+id/btnOTP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.12"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="Generate OTP"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/activity_verify_et_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0.1"
            android:alpha="1"
            android:enabled="true"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <com.luminous.mpartner.custom_text_view.TextViewRegular
            android:id="@+id/tvResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:alpha="1"
            android:enabled="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/resend"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="0.12"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:visibility="gone" />

    </LinearLayout>
</layout>