<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/header_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_toLeftOf="@id/fl_header_arrow"
            android:background="@color/gray_1"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/catalog_header_item" />

        <FrameLayout
            android:id="@+id/fl_header_arrow"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@color/gray_2"
            android:paddingLeft="3dp"
            android:paddingTop="11dp"
            android:paddingRight="3dp"
            android:paddingBottom="11dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:src="@drawable/catlog_arro" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_recycle_view"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingTop="@dimen/five_dp"
            android:paddingRight="@dimen/ten_dp"
            android:paddingBottom="@dimen/five_dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/pdfDownloadTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/pdf_icon"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_vertical"
                android:text="@string/download_pdf"
                android:textColor="@color/text_color_entry"
                android:textSize="@dimen/text_size_small"
                />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <com.luminous.mpartner.custom_text_view.TextViewRegular
                    android:id="@+id/inverlast_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/inverlast"
                    android:textColor="@color/text_blue_color"
                    android:textSize="@dimen/text_size_normal" />


                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:background="@drawable/toggle_selector"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />

                <com.luminous.mpartner.custom_text_view.TextViewRegular
                    android:id="@+id/electra_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electra"
                    android:textColor="@color/text_color_entry"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/productRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/footer_recycle_view"
            android:layout_below="@+id/container"
            android:background="@color/gray_1"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/product_details_row_item" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/footer_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@id/fl_footer_arrow"
            android:background="@color/gray_1"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/catalog_footer_item" />

        <FrameLayout
            android:id="@+id/fl_footer_arrow"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:background="@color/gray_2"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"
            android:paddingRight="3dp"
            android:paddingBottom="8dp"
            >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:src="@drawable/catlog_arro"
                />
        </FrameLayout>

    </RelativeLayout>
</layout>